fix: reduce navbar logo clickable area

--- a/application/frontend/src/scaffolding/Header/header.scss
+++ b/application/frontend/src/scaffolding/Header/header.scss
@@ -41,8 +41,9 @@
   gap: 0.5rem;
   margin-left: 4rem;
   img {
-    height: 10rem;
+    height: 4rem;
     width: 10rem;
+    display: block;
   }
 }
 
