--- a/application/templates/includes/navigation.html
+++ b/application/templates/includes/navigation.html
@@ -51,7 +51,7 @@
                                                     <span class="mr-1"><span class="fas fa-th-large"></span></span>
                                                     UI components
                                                 </a>
-                                                <a href="https://themesberg.com/docs/pixel-bootstrap/getting-started/overview/" target="_blank" class="btn btn-outline-white btn-icon animate-up-2 mb-2 mb-sm-0">
+                                                <a href="https://themesberg.com/docs/pixel-bootstrap/getting-started/overview/" target="_blank" rel="noopener noreferrer" class="btn btn-outline-white btn-icon animate-up-2 mb-2 mb-sm-0">
                                                     <span class="mr-1"><span class="fas fa-book"></span></span>
                                                     UI Docs
                                                 </a>
@@ -67,18 +67,18 @@
                                             <li><a class="dropdown-item" href="/ui-bootstrap-carousels.html">Bootstrap Carousels</a></li>
                                             <li><a class="dropdown-item" href="/ui-breadcrumbs.html">Breadcrumbs</a></li>
                                             <li><a class="dropdown-item" href="/ui-buttons.html">Buttons</a></li>
-                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/plugins/jquery-counters/" target="_blank">Counters <span class="badge badge-tertiary ml-3">Pro</span></a></li>
-                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/components/buttons/#button-dropdown" target="_blank">Dropdowns <span class="badge badge-tertiary ml-3">Pro</span></a></li>
+                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/plugins/jquery-counters/" target="_blank" rel="noopener noreferrer">Counters <span class="badge badge-tertiary ml-3">Pro</span></a></li>
+                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/components/buttons/#button-dropdown" target="_blank" rel="noopener noreferrer">Dropdowns <span class="badge badge-tertiary ml-3">Pro</span></a></li>
                                         </ul>
                                     </div>
                                     <div class="col pl-0">
                                         <ul class="list-style-none">
-                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/components/e-commerce/" target="_blank">E-commerce <span class="badge badge-tertiary ml-3">Pro</span></a></li>
+                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/components/e-commerce/" target="_blank" rel="noopener noreferrer">E-commerce <span class="badge badge-tertiary ml-3">Pro</span></a></li>
                                             <li><a class="dropdown-item" href="/ui-forms.html">Forms</a></li>
-                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/components/icon-boxes/" target="_blank">Icon Boxes <span class="badge badge-tertiary ml-3">Pro</span></a></li>
+                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/components/icon-boxes/" target="_blank" rel="noopener noreferrer">Icon Boxes <span class="badge badge-tertiary ml-3">Pro</span></a></li>
                                             <li><a class="dropdown-item" href="/ui-modals.html">Modals</a></li>
                                             <li><a class="dropdown-item" href="/ui-navs.html">Navs</a></li>
-                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/plugins/owl-carousel/" target="_blank">Owl Carousels <span class="badge badge-tertiary ml-3">Pro</span></a></li>
+                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/plugins/owl-carousel/" target="_blank" rel="noopener noreferrer">Owl Carousels <span class="badge badge-tertiary ml-3">Pro</span></a></li>
                                             <li><a class="dropdown-item" href="/ui-pagination.html">Pagination</a></li>
                                             <li><a class="dropdown-item" href="/ui-popovers.html">Popovers</a></li>
                                             <li><a class="dropdown-item" href="/ui-progress-bars.html">Progress Bars</a></li>
@@ -87,13 +87,13 @@
                                     </div>
                                     <div class="col pl-0">
                                         <ul class="list-style-none">
-                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/components/icon-boxes/#steps" target="_blank">Steps <span class="badge badge-tertiary ml-3">Pro</span></a></li>
+                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/components/icon-boxes/#steps" target="_blank" rel="noopener noreferrer">Steps <span class="badge badge-tertiary ml-3">Pro</span></a></li>
                                             <li><a class="dropdown-item" href="/ui-tabs.html">Tabs</a> </li>
                                             <li><a class="dropdown-item" href="/ui-toasts.html">Toasts</a> </li>
-                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/components/timelines/" target="_blank">Timelines <span class="badge badge-tertiary ml-3">Pro</span></a></li>
+                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/components/timelines/" target="_blank" rel="noopener noreferrer">Timelines <span class="badge badge-tertiary ml-3">Pro</span></a></li>
                                             <li><a class="dropdown-item" href="/ui-tooltips.html">Tooltips</a></li>
                                             <li><a class="dropdown-item" href="/ui-typography.html">Typography</a></li>
-                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/plugins/chart-js/" target="_blank">Charts <span class="badge badge-tertiary ml-3">Pro</span></a></li>
+                                            <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://themesberg.com/docs/pixel-bootstrap/plugins/chart-js/" target="_blank" rel="noopener noreferrer">Charts <span class="badge badge-tertiary ml-3">Pro</span></a></li>
                                             <li><a class="dropdown-item d-flex align-items-center justify-content-between" href="https://demo.themesberg.com/pixel-pro/html/components/widgets.html">Widgets <span class="badge badge-tertiary ml-3">Pro</span></a></li>
                                         </ul>
                                     </div>
@@ -109,14 +109,14 @@
                                 <div class="col-auto px-0" data-dropdown-content>
                                     <div class="list-group list-group-flush">
                                         <a href="https://github.com/app-generator/jinja-template-pixel-uikit" 
-                                           target="_blank" class="list-group-item list-group-item-action d-flex align-items-center p-0 py-3 px-lg-4">
+                                           target="_blank" rel="noopener noreferrer" class="list-group-item list-group-item-action d-flex align-items-center p-0 py-3 px-lg-4">
                                             <span class="icon icon-sm icon-secondary"><span class="fas fa-file-alt"></span></span>
                                             <div class="ml-4">
                                                 <span class="text-dark d-block">Documentation</span>
                                                 <span class="small">Learn how to build the app</span>
                                             </div>
                                         </a>
-                                        <a href="https://appseed.us/support" target="_blank" class="list-group-item list-group-item-action d-flex align-items-center p-0 py-3 px-lg-4">
+                                        <a href="https://appseed.us/support" target="_blank" rel="noopener noreferrer" class="list-group-item list-group-item-action d-flex align-items-center p-0 py-3 px-lg-4">
                                             <span class="icon icon-sm icon-primary"><span class="fas fa-microphone-alt"></span></span>
                                             <div class="ml-4">
                                                 <span class="text-dark d-block">Support</span>
@@ -134,7 +134,7 @@
                 <div class="d-flex align-items-center">
                     <span class="d-none d-md-inline"> 
                       <a href="https://appseed.us/jinja-template/jinja-pixel-uikit-pro" 
-                         target="_blank" class="btn btn-tertiary animate-up-2">
+                         target="_blank" rel="noopener noreferrer" class="btn btn-tertiary animate-up-2">
                          <span class="fas fa-rocket mr-2"></span>PRO Version</a>
                     </span>
                     
